Mirror Bisect Modifer Causes Holes #74172

Closed
opened 2020-02-24 16:00:01 +01:00 by Philip Holzmann · 4 comments

System Information
Operating system: Debian Linux 9, 64 bit
Graphics card: Intel

Blender Version
Broken: 2.82

Short description of error
The mirror modifier, when used with bisect enabled sometimes makes holes appear along the mirror plane.
It seems to happen mostly if a vertex in the original mesh almost touches the mirror plane.

It can be mitigated by increasing the Merge Limit, however I think that this should not happen at all.

It seems that the bisect operator decides for vertices that are "on" the plane to not generate connecting geometry.
Further, I have tried fixing this by setting the use_snap_center parameter of the BM_mesh_bisect_plane call in BKE_mesh_mirror_bisect_on_mirror_plane to true.
This seems to fix the issue.

Exact steps for others to reproduce the error
mirror_bisect.blend
Observe the hole in the mesh.
"Face Orientation" is enabled, so the hole can be spotted easily by its red color.

**System Information** Operating system: Debian Linux 9, 64 bit Graphics card: Intel **Blender Version** Broken: 2.82 **Short description of error** The mirror modifier, when used with bisect enabled sometimes makes holes appear along the mirror plane. It seems to happen mostly if a vertex in the original mesh almost touches the mirror plane. It can be mitigated by increasing the *Merge Limit*, however I think that this should not happen at all. It seems that the bisect operator decides for vertices that are "on" the plane to not generate connecting geometry. Further, I have tried fixing this by setting the `use_snap_center` parameter of the `BM_mesh_bisect_plane` call in `BKE_mesh_mirror_bisect_on_mirror_plane` to true. This seems to fix the issue. **Exact steps for others to reproduce the error** [mirror_bisect.blend](https://archive.blender.org/developer/F8366516/mirror_bisect.blend) Observe the hole in the mesh. "Face Orientation" is enabled, so the hole can be spotted easily by its red color.

Added subscriber: @Foaly

Added subscriber: @Foaly

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by b900a5e452

This issue was referenced by b900a5e4527035b7eaf02d5df4b5fcaaeee52703

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-04-23 08:16:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74172
No description provided.