Fix T74172: Mirror with bisect results in holes

Enable snap-to-center when bisecting.